fix: update notification bar z-index to 100

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -574,7 +574,7 @@ blockquote .small {
 .alert {
   border-radius: 0px;
   overflow-wrap: break-word;
-  z-index: 1;
+  z-index: 100;
 }
 
 /* gatsby 404 */
